testai veikia pas Justina